syntax = "proto3";

package ru.tinkoff.kora.generated.grpc;

service AuthService {
  rpc checkToken(CheckTokenRequest) returns (CheckTokenResponse) {}
  rpc login(LoginRequest) returns (LoginResponse) {}
  rpc CheckTokenWithId(CheckTokenWithIdRequest) returns (CheckTokenWithIdResponse) {}
  rpc CheckAdmin(CheckAdminRequest) returns (CheckAdminResponse) {}
  rpc InvalidateUserCache(InvalidateUserCacheRequest) returns (InvalidateUserCacheResponse) {}
}

message CheckTokenRequest {
  string token = 1;
}

message CheckTokenResponse {
  bool isValid = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message CheckAdminRequest {
  string token = 1;
}

message CheckTokenWithIdRequest {
  string token = 1;
  uint64 id = 2;
}

message CheckTokenWithIdResponse {
  bool isValid = 1;
}

message CheckAdminResponse {
  bool isValid = 1;
}

message InvalidateUserCacheRequest {
  string login = 1;
}

message InvalidateUserCacheResponse {

}